--- a/posts/the-snake-lemma-and-long-exact-sequences/tikz/snake_lemma.tex
+++ b/posts/the-snake-lemma-and-long-exact-sequences/tikz/snake_lemma.tex
@@ -1,6 +1,7 @@
 \nofiles
 \documentclass[crop,tikz]{standalone}
 \usepackage{amsmath}
+\usepackage{scalerel}
 \usepackage{tikz}
 \usepackage{tikz-cd}
 \usetikzlibrary{%
@@ -11,41 +12,41 @@
 
 \DeclareMathOperator{\coker}{coker}
 \begin{document}
-  \begin{tikzpicture}[>=triangle 60]
-    \matrix[matrix of math nodes,column sep={60pt,between origins},row
-    sep={60pt,between origins},nodes={asymmetrical rectangle}] (s)
+  \begin{tikzpicture}
+    \matrix[matrix of nodes,column sep={52pt,between origins},row
+    sep={40pt,between origins},nodes={asymmetrical rectangle}] (s)
     {
-      &|[name=ka]| \ker f &|[name=kb]| \ker g &|[name=kc]| \ker h \\
+      &|[name=ka]| {$\ker \alpha$} &|[name=kb]| {$\ker \beta$} &|[name=kc]| {$\ker \gamma$} \\
       %
-      &|[name=A]| A' &|[name=B]| B' &|[name=C]| C' &|[name=01]| 0 \\
+      &|[name=A]| {$A_1$} &|[name=B]| {$B_1$} &|[name=C]| {$C_1$} &|[name=01, left=20pt, above=-3.5pt]| {$0$} \\
       %
-      |[name=02]| 0 &|[name=A']| A &|[name=B']| B &|[name=C']| C \\
+      |[name=02, right=10pt, above=-3.5pt]| {$0$} &|[name=A']| {$A_2$} &|[name=B']| {$B_2$} &|[name=C']| {$C_2$} \\
       %
-      &|[name=ca]| \coker f &|[name=cb]| \coker g &|[name=cc]| \coker h \\
+      &|[name=ca]| {$\coker \alpha$} &|[name=cb]| {$\coker \beta$} &|[name=cc]| {$\coker \gamma$} \\
     };
     \draw[->] (ka) edge (A)
     (kb) edge (B)
     (kc) edge (C)
-    (A) edge (B)
-    (B) edge node[auto] {\(p\)} (C)
+    (A) edge node[auto] {\small $\scaleobj{0.8}{\iota_1}$} (B)
+    (B) edge node[auto] {\small $\scaleobj{0.8}{\pi_2}$} (C)
     (C) edge (01)
-    (A) edge node[auto] {\(f\)} (A')
-    (B) edge node[auto] {\(g\)} (B')
-    (C) edge node[auto] {\(h\)} (C')
+    (A) edge node[auto] {\small $\scaleobj{0.8}{\alpha}$} (A')
+    (B) edge node[auto] {\small $\scaleobj{0.8}{\beta}$} (B')
+    (C) edge node[auto] {\small $\scaleobj{0.8}{\gamma}$} (C')
     (02) edge (A')
-    (A') edge node[auto] {\(i\)} (B')
-    (B') edge (C')
+    (A') edge node[auto] {\small $\scaleobj{0.8}{\iota_2}$} (B')
+    (B') edge node[auto] {\small $\scaleobj{0.8}{\pi_2}$} (C')
     (A') edge (ca)
     (B') edge (cb)
     (C') edge (cc)
     ;
-    \draw[->,gray] (ka) edge (kb)
-    (kb) edge (kc)
-    (ca) edge (cb)
-    (cb) edge (cc)
+    \draw[->,gray] (ka) edge node[auto, black] {\small $\scaleobj{0.8}{\overline{\vphantom{+}\iota_1}}$} (kb)
+    (kb) edge node[auto, black] {\small $\scaleobj{0.8}{\overline{\vphantom{+}\pi_1}}$} (kc)
+    (ca) edge node[auto, black] {\small $\scaleobj{0.8}{\overline{\vphantom{+}\iota_2}}$} (cb)
+    (cb) edge node[auto, black] {\small $\scaleobj{0.8}{\overline{\vphantom{+}\pi_2}}$} (cc)
     ;
-    \draw[->,gray,rounded corners] (kc) -| node[auto,text=black,pos=.7]
-    {\(\partial\)} ($(01.east)+(.5,0)$) |- ($(B)!.35!(B')$) -|
+    \draw[->,gray,rounded corners] (kc) -| node[auto,text=black,pos=.7,below=11pt,right=2pt]
+    {\(\delta\)} ($(01.east)+(.5,0)$) |- ($(B)!.35!(B')$) -|
     ($(02.west)+(-.5,0)$) |- (ca);
 \end{tikzpicture}
 \end{document}
